@@ -21,6 +21,9 @@
 
 package org.matsim.freight.carriers;
 
+import static org.junit.jupiter.api.Assertions.*;
+
+import java.util.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
@@ -29,10 +32,6 @@ import org.matsim.api.core.v01.TransportMode;
 import org.matsim.freight.carriers.CarrierCapabilities.FleetSize;
 import org.matsim.testcases.MatsimTestUtils;
 import org.matsim.vehicles.Vehicle;
-
-import java.util.*;
-
-import static org.junit.jupiter.api.Assertions.*;
 
 public class CarrierPlanXmlWriterV2_1Test {
 
@@ -115,7 +114,7 @@ public class CarrierPlanXmlWriterV2_1Test {
 	@Test
 	void test_whenReadingToursOfPlan1_nuOfActivitiesIsCorrect(){
 		List<CarrierPlan> plans = new ArrayList<>(testCarrier.getPlans());
-		CarrierPlan plan1 = plans.getFirst();
+		CarrierPlan plan1 = plans.get(0);
 		ScheduledTour tour1 = plan1.getScheduledTours().iterator().next();
 		assertEquals(5,tour1.getTour().getTourElements().size());
 	}
@@ -139,7 +138,7 @@ public class CarrierPlanXmlWriterV2_1Test {
 	@Test
 	void test_whenReadingToursOfPlan1_SpritScoreIsCorrect(){
 		List<CarrierPlan> plans = new ArrayList<>(testCarrier.getPlans());
-		CarrierPlan plan1 = plans.getFirst();
+		CarrierPlan plan1 = plans.get(0);
 		plan1.getAttributes().getAttribute("jspritScore");
 		assertEquals(Double.NaN, CarriersUtils.getJspritScore(plan1), MatsimTestUtils.EPSILON);
 		assertEquals(Double.NaN, CarriersUtils.getJspritScore(plan1), MatsimTestUtils.EPSILON);
